load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

RULES_ABCUE_COMMIT = "c59b98b95c0920deb7cbaf57ee436484c5b2acd8"

http_archive(
    name = "rules_abcue",
    sha256 = "df41b741938edb5acf128ae44caec3dd6f825635b506958580c6390ca606b755",
    strip_prefix = "rules_abcue-%s" % RULES_ABCUE_COMMIT,
    urls = [
        "https://github.com/abcue/rules_abcue/archive/%s.zip" % RULES_ABCUE_COMMIT,
    ],
)

load("@rules_abcue//cue:repositories.bzl", "cue_register_toolchains", "rules_abcue_dependencies")

rules_abcue_dependencies()

cue_register_toolchains()

http_archive(
    name = "io_bazel_rules_go",
    sha256 = "6734a719993b1ba4ebe9806e853864395a8d3968ad27f9dd759c196b3eb3abe8",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/rules_go/releases/download/v0.45.1/rules_go-v0.45.1.zip",
        "https://github.com/bazelbuild/rules_go/releases/download/v0.45.1/rules_go-v0.45.1.zip",
    ],
)

load("@io_bazel_rules_go//go:deps.bzl", "go_register_toolchains", "go_rules_dependencies")

go_rules_dependencies()

go_register_toolchains(version = "1.21.6")
